<resources>
    <string name="app_name">StineriaDev</string>
    <string name="logoapp">LogoApp</string>
    <string name="loginbtn">Login</string>
    <string name="usernamelogin">Username, Phone, E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">Don\'t have an account ? Sign up !</string>
    <string name="passforgot">Forgot password ?</string>
    <string name="username_register">Username</string>
    <string name="email_register">E-mail</string>
    <string name="phone_register">Phone Number</string>
    <string name="pass_register">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">You have already account ? Sign in !</string>
    <string name="send_mail">Send e-mail</string>
    <string name="email_pass_forgot">E-mail of your account</string>
    <string name="photo_profil">photo_profil</string>
    <string name="btn_message">btn_message</string>
    <string name="title_activity_slide_account">slide_account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>